[package]
name = "adventure-game"
version = "0.1.0"
edition = "2021"

[dependencies]
frenderer = {version="0.9"}
winit = "0.29"
image = {version="0.24.7", features=["png"]}
assets_manager = { version = "0.11", features = ["png", "hot-reloading", "embedded"] }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features=["js"]
version="0.2.12"

[features]
default = []
webgl = ["frenderer/webgl"]